--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style/portfolio.css" />
 
     <title>Portfolio</title>
   </head>
   <body>
-   <h1>Hello World</h1> 
+    <h1>Hello World</h1>
   </body>
 </html>
