--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <h1>Josephine</h1>
-    <p>Hi there</p>
+    <div class="d-flex bg-warning">
+      <h1>Josephine</h1>
+      <p>Hi there</p>
+    </div>
   </body>
 </html>
