added image and text

--- a/index.html
+++ b/index.html
@@ -30,8 +30,34 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-1"></div>
-        <div class="col-sm-3">image</div>
-        <div class="col-sm-6">Text</div>
+        <div class="col-sm-3">
+          <img
+            src="image/JJ.jpeg"
+            class="img-fluid rounded shadow-sm p-2"
+            alt="Josephine"
+          />
+        </div>
+        <div class="col-sm-7">
+          <h1>Josephine Jacobs</h1>
+          <h2>Frontend developer based in Frankfurt, Germany</h2>
+          <p>
+            Meet Josephine Jacobs, the dynamic teacher-turned-web-wizard!
+            Hailing from the vibrant city of Singapore, Josephine dazzled
+            students with her artistic flair and navigated the wonders of
+            Geography in secondary schools. But wait, the plot thickens – love
+            led her on a whimsical journey to Germany, where she's now crafting
+            her own tale of exploration and reinvention! In the enchanting realm
+            of the internet, Josephine has donned her virtual cape and is
+            currently donning her coding armor with Shecodes.io. Forget
+            chalkboards and textbooks; she's now weaving her magic with HTML,
+            CSS, Responsive design, and a sprinkle of JavaScript to create
+            digital masterpieces on the vast canvas of the web. Whether she's
+            drawing on a whiteboard or debugging lines of code, Josephine Jacobs
+            is your go-to gal for both artistic inspiration and tech-savvy
+            wizardry. Join her on this exhilarating ride as she transforms from
+            a seasoned educator to a digital sorceress!
+          </p>
+        </div>
         <div class="col-sm-1"></div>
       </div>
     </div>
