--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="col-sm-3">
           <img
             src="image/JJ.jpeg"
-            class="img-fluid rounded shadow-sm p-2"
+            class="img-fluid rounded shadow-lg p-3"
             alt="Josephine"
           />
         </div>
