centered photo on small screen

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
       <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-3">
-          <img
-            src="image/JJ.jpeg"
-            class="img-fluid rounded shadow-lg p-3"
-            alt="Josephine"
-          />
+          <div class="text-center">
+            <img
+              src="image/JJ.jpg"
+              class="img-fluid float-sm-start rounded shadow-lg p-1"
+              alt="Josephine"
+            />
+          </div>
         </div>
         <div class="col-sm-7">
           <h1>Josephine Jacobs</h1>
@@ -61,5 +63,34 @@
         <div class="col-sm-1"></div>
       </div>
     </div>
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
