--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
         <div class="col-sm-1"></div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-5"></div>
+      <div class="col-sm-2">
+        <button type="button" class="btn btn-outline-dark">Projects</button>
+      </div>
+      <div class="col-sm-2">
+        <button type="button" class="btn btn-outline-dark">Contact</button>
+      </div>
+      <div class="col-sm-3"></div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
