--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
     <div class="row">
       <div class="col-sm-5"></div>
       <div class="col-sm-2">
-        <button type="button" class="btn btn-outline-dark">Projects</button>
+        <button type="button" class="btn btn-outline-dark btn-sm">
+          Projects
+        </button>
       </div>
       <div class="col-sm-2">
-        <button type="button" class="btn btn-outline-dark">Contact</button>
+        <button type="button" class="btn btn-outline-dark btn-sm">
+          Contact
+        </button>
       </div>
       <div class="col-sm-3"></div>
     </div>
@@ -106,5 +110,8 @@
         </div>
       </div>
     </nav>
+    <footer>
+      This page is created by Josephine Jacobs @ 2023 using Responsive
+    </footer>
   </body>
 </html>
