--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-1"></div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 d-none d-md-block">
           <div class="text-center">
             <img
               src="image/JJ.jpg"
-              class="img-fluid float-sm-start rounded shadow-lg p-1"
+              class="img-fluid float-sm-start rounded-4 shadow-lg p-1"
               alt="Josephine"
             />
           </div>
@@ -65,17 +65,13 @@
     </div>
     <div class="row">
       <div class="col-sm-5"></div>
-      <div class="col-sm-2">
-        <button type="button" class="btn btn-outline-dark btn-sm">
-          Projects
-        </button>
+      <div class="col-sm-2" id="button">
+        <a href="about.html" class="btn btn-outline-dark btn-sm">Projects</a>
+        <a href="contact.html" class="btn btn-outline-dark btn-sm"
+          >Contact me</a
+        >
       </div>
-      <div class="col-sm-2">
-        <button type="button" class="btn btn-outline-dark btn-sm">
-          Contact
-        </button>
-      </div>
-      <div class="col-sm-3"></div>
+      <div class="col-sm-5"></div>
     </div>
     <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
       <div class="container-fluid">
@@ -101,10 +97,10 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="about.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
