--- a/about.html
+++ b/about.html
@@ -1,12 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style/portfolio.css" />
+    <title>Projects</title>
+  </head>
+  <body>
+    <div class="about-section container">
+      <div class="row mb-5">
+        <div class="col-sm-5 d-none d-lg-block">
+          <img
+            src="image/YogurtProject.jpeg"
+            class="img-fluid w-75 rounded-2"
+            alt=""
+          />
+        </div>
+        <div class="col-sm-7">
+          <div class="project-desciption">
+            <h2 class="mb-5">Yogurt Project</h2>
+            <p class="mb-5 text-center">
+              If you want to make frozen yogurt, presumably you’re expecting to
+              use yogurt for a good portion of your recipe. (It is the “yo” in
+              fro-yo, after all.) The problem is that yogurt, while creamy when
+              you spoon it from the carton, actually contains a good amount of
+              water and not a lot of fat. When you freeze it, the water forms
+              crystals that make fro-yo icy and decidedly non-creamy. The water
+              also makes it challenging to freeze yogurt into something that’s
+              actually scoopable and not just a solid ice cube. While there are
+              a few ways you can solve this dilemma (like hanging the yogurt in
+              a cheesecloth overnight), in the end I decided to just embrace
+              plain yogurt and turn to a few cooking tricks to ensure a
+              spoonable creamy, and totally satisfying dessert.
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Dictionary App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline"> Learn more </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img src="image/logo.png" alt="" class="logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <footer>
+      This page is created by Josephine Jacobs @ 2023 using Responsive
+    </footer>
+  </body>
 </html>
