--- a/index.html
+++ b/index.html
@@ -65,11 +65,15 @@
     </div>
     <div class="row">
       <div class="col-sm-5"></div>
-      <div class="col-sm-2" id="button">
-        <a href="about.html" class="btn btn-outline-dark btn-sm">Projects</a>
-        <a href="contact.html" class="btn btn-outline-dark btn-sm"
-          >Contact me</a
-        >
+      <div class="col-sm-2">
+        <div class="buttons-gallery">
+          <a href="projects.html" class="btn btn-outline-dark btn-sm"
+            >Projects</a
+          >
+          <a href="contact.html" class="btn btn-outline-dark btn-sm"
+            >Contact me</a
+          >
+        </div>
       </div>
       <div class="col-sm-5"></div>
     </div>
@@ -97,7 +101,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Projects</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
