edited text on yogurt project

--- a/projects.html
+++ b/projects.html
@@ -33,25 +33,28 @@
           <img
             src="image/YogurtProject.jpeg"
             class="img-fluid w-75 rounded-2"
-            alt=""
+            alt="YogurtProject"
           />
         </div>
         <div class="col-sm-7">
           <div class="project-desciption">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-center">
-              If you want to make frozen yogurt, presumably you’re expecting to
-              use yogurt for a good portion of your recipe. (It is the “yo” in
-              fro-yo, after all.) The problem is that yogurt, while creamy when
-              you spoon it from the carton, actually contains a good amount of
-              water and not a lot of fat. When you freeze it, the water forms
-              crystals that make fro-yo icy and decidedly non-creamy. The water
-              also makes it challenging to freeze yogurt into something that’s
-              actually scoopable and not just a solid ice cube. While there are
-              a few ways you can solve this dilemma (like hanging the yogurt in
-              a cheesecloth overnight), in the end I decided to just embrace
-              plain yogurt and turn to a few cooking tricks to ensure a
-              spoonable creamy, and totally satisfying dessert.
+              This is my very first project with Shecodes.io. It transforms
+              design using technology into digital space, combining HTML and CSS
+              to deliver a visually engaging experience. The carefully selected
+              image not only enhance the aesthetic appeal but also contribute to
+              narrate the meaning of the text. You'll find a button
+              strategically placed at the bottom of the text, beckoning you to
+              embark on a journey to another page. Clicking it will seamlessly
+              transition you to another chapter of the online story. My
+              commitment to user-friendly design is evident in every element of
+              this web page. The integration of finding a suituable image adds a
+              layer of richness to the user experience, allowing viewers to feel
+              visually satisfying. This web page is not just a destination; it's
+              an invitation to a digital adventure where technology meets
+              creativity, and in every digital space unveils a new facet of our
+              virtual world.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
