use bootstrap buttons on main

--- a/index.html
+++ b/index.html
@@ -60,23 +60,13 @@
             a seasoned educator to a digital sorceress!
           </p>
         </div>
-        <div class="col-sm-1"></div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-5"></div>
-      <div class="col-sm-2">
-        <div class="buttons-gallery">
-          <a href="projects.html" class="btn btn-outline-dark btn-sm"
-            >Projects</a
-          >
-          <a href="contact.html" class="btn btn-outline-dark btn-sm"
-            >Contact me</a
-          >
-        </div>
-      </div>
-      <div class="col-sm-5"></div>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-center">
+      <a href="projects.html" class="btn btn-outline-dark btn-sm">Projects</a>
+      <a href="contact.html" class="btn btn-outline-dark btn-sm">Contact me</a>
     </div>
+
     <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
