--- a/projects.html
+++ b/projects.html
@@ -27,19 +27,19 @@
     <title>Projects</title>
   </head>
   <body>
-    <div class="about-section container">
-      <div class="row mb-5">
-        <div class="col-sm-5 d-none d-lg-block">
+    <div class="about-section container m-t-">
+      <div class="row mb-6">
+        <div class="col-sm-5 d-lg-block">
           <img
             src="image/YogurtProject.jpeg"
-            class="img-fluid w-75 rounded-2"
+            class="img-fluid w-50 pe-auto rounded-2"
             alt="YogurtProject"
           />
         </div>
-        <div class="col-sm-7">
+        <div class="col-sm-6">
           <div class="project-desciption">
             <h2 class="mb-5">Yogurt Project</h2>
-            <p class="mb-5 text-center">
+            <p class="mb-5 text-lg-start">
               This is my very first project with Shecodes.io. It transforms
               design using technology into digital space, combining HTML and CSS
               to deliver a visually engaging experience. The carefully selected
