--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
 
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Portfolio Homepage</title>
+    <title>Josephine's Portfolio</title>
   </head>
   <body>
     <div class="container">
@@ -34,8 +34,8 @@
           <div class="text-center">
             <img
               src="image/JJ.jpg"
-              class="img-fluid float-sm-start rounded-4 shadow-lg p-1"
-              alt="Josephine"
+              class="img-fluid float-sm-start rounded-4 shadow-lg p-1 border"
+              alt="Josephine Jacobs"
             />
           </div>
         </div>
