--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
         </div>
         <div class="col-sm-6">
           <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-1">Yogurt Project</h2>
             <p class="mb-5 text-lg-start">
               This is my very first project with Shecodes.io. It transforms
               design using technology into digital space, combining HTML and CSS
@@ -55,8 +55,13 @@
               an invitation to a digital adventure where technology meets
               creativity, and in every digital space unveils a new facet of our
               virtual world.
+              <br />
+              <a
+                href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                class="btn btn-branding-outline text-lg-start"
+                >Learn more</a
+              >
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
       </div>
