working on project page

--- a/projects.html
+++ b/projects.html
@@ -56,8 +56,10 @@
               creativity, and in every digital space unveils a new facet of our
               virtual world.
               <br />
+              <br />
               <a
                 href="https://www.shecodes.io/graduates/83802-josephine-lu-ching-jacobs"
+                target="_blank"
                 class="btn btn-branding-outline text-lg-start"
                 >Learn more</a
               >
@@ -65,35 +67,67 @@
           </div>
         </div>
       </div>
+      <br />
       <div class="row mb-5">
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mb-5">Hobby Page</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This is my very first project with Shecodes.io. It transforms
+              design using technology into digital space, combining HTML and CSS
+              to deliver a visually engaging experience. The carefully selected
+              image not only enhance the aesthetic appeal but also contribute to
+              narrate the meaning of the text. You'll find a button
+              strategically placed at the bottom of the text, beckoning you to
+              embark on a journey to another page. Clicking it will seamlessly
+              transition you to another chapter of the online story. My
+              commitment to user-friendly design is evident in every element of
+              this web page. The integration of finding a suituable image adds a
+              layer of richness to the user experience, allowing viewers to feel
+              visually satisfying. This web page is not just a destination; it's
+              an invitation to a digital adventure where technology meets
+              creativity, and in every digital space unveils a new facet of our
+              virtual world.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img
+            src="image/hobby.png"
+            class="img-fluid w-50 pe-auto rounded-2"
+            alt="hobby"
+          />
         </div>
       </div>
+      <br />
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="image/weather app.png"
+            class="img-fluid w-30 pe-auto rounded-2"
+            alt="weather App"
+          />
         </div>
         <div class="col">
           <div class="project-desciption">
-            <h2 class="mb-5">Dictionary App</h2>
+            <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This is my very first project with Shecodes.io. It transforms
+              design using technology into digital space, combining HTML and CSS
+              to deliver a visually engaging experience. The carefully selected
+              image not only enhance the aesthetic appeal but also contribute to
+              narrate the meaning of the text. You'll find a button
+              strategically placed at the bottom of the text, beckoning you to
+              embark on a journey to another page. Clicking it will seamlessly
+              transition you to another chapter of the online story. My
+              commitment to user-friendly design is evident in every element of
+              this web page. The integration of finding a suituable image adds a
+              layer of richness to the user experience, allowing viewers to feel
+              visually satisfying. This web page is not just a destination; it's
+              an invitation to a digital adventure where technology meets
+              creativity, and in every digital space unveils a new facet of our
+              virtual world.
             </p>
             <a href="" class="btn btn-branding-outline"> Learn more </a>
           </div>
@@ -134,7 +168,7 @@
       </div>
     </nav>
     <footer>
-      This page is created by Josephine Jacobs @ 2023 using Responsive
+      This page is created by Josephine Jacobs @ 2024 using Responsive
     </footer>
   </body>
 </html>
