added content page

--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,90 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&family=Rubik:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style/portfolio.css" />
+    <title>Josephine's contact</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-3 d-none d-md-block">
+          <div class="text-center">
+            <img
+              src="image/JJ.jpg"
+              class="img-fluid float-sm-start rounded-4 shadow-lg p-1 border"
+              alt="Josephine Jacobs"
+            />
+          </div>
+        </div>
+        <div class="col-sm-7">
+          <h1>Josephine Jacobs</h1>
+          <h2>Frontend developer based in Frankfurt, Germany</h2>
+          <p>Contact me</p>
+        </div>
+      </div>
+    </div>
+    <div class="d-grid gap-4 d-md-flex justify-content-md-center">
+      <a href="projects.html" class="btn btn-outline-dark btn-sm">Projects</a>
+      <a href="contact.html" class="btn btn-outline-dark btn-sm">Contact me</a>
+    </div>
+
+    <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img src="image/logo.png" alt="" class="logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <footer>
+      This page is created by Josephine Jacobs @ 2024 using Responsive
+    </footer>
+  </body>
 </html>
