changes to contact page

--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
           <div class="col d-none d-lg-block">
             <img
               src="image/hobby.png"
-              class="img-thumbnail w-50 pe-auto rounded-2 mt-2 mb-3"
+              class="img-thumbnail w-50 pe-auto rounded-2 mt-2 mb-"
               alt="hobby"
             />
           </div>
