--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <img
               src="image/JJ.jpg"
               class="img-fluid float-sm-start rounded-4 shadow-lg p-1 border"
+              title="Josephine Jacobs"
               alt="Josephine Jacobs"
             />
           </div>
@@ -63,8 +64,15 @@
       </div>
     </div>
     <div class="d-grid gap-4 d-md-flex justify-content-md-center">
-      <a href="projects.html" class="btn btn-outline-dark btn-sm">Projects</a>
-      <a href="contact.html" class="btn btn-outline-dark btn-sm">Contact me</a>
+      <a
+        href="projects.html"
+        title="projects"
+        class="btn btn-outline-dark btn-sm"
+        >Projects</a
+      >
+      <a href="contact.html" title="contact" class="btn btn-outline-dark btn-sm"
+        >Contact me</a
+      >
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-grey fixed-top">
