--- a/projects.html
+++ b/projects.html
@@ -271,7 +271,10 @@
       </div>
     </nav>
     <footer>
-      This page is created by Josephine Jacobs @ 2024 using Responsive
+      This page is created by Josephine Jacobs @ 2024 using Responsive,
+      <a href="https://github.com/JosephineJacobs/Portfolio-JJ" target="_blank"
+        >open-sourced code</a
+      >
     </footer>
   </body>
 </html>
