added met content

--- a/contact.html
+++ b/contact.html
@@ -56,14 +56,14 @@
           <br />
           <br />
 
-          <h2>Linkedin account</h2>
+          <h2>LinkedIn account</h2>
           <br />
           <h3>
             <a
               href="https://www.linkedin.com/in/josephine-jacobs-22704f/"
               target="_blank"
               class="btn-branding-outline"
-              >linkedin-josephine-jacobs-22704f/</a
+              >linkedIn-josephine-jacobs-22704f/</a
             >
           </h3>
         </div>
