--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Josephine Jacobs, the dynamic teacher-turned-web-wizard!
+            Hailing from the vibrant city of Singapore, Josephine' marriage
+            led her on a whimsical journey to Germany, where she's now crafting
+            her own tale of exploration and reinvention! In the enchanting realm
+            of the internet, Josephine has donned her virtual cape and is
+            currently donning her coding armor with Shecodes.io. "
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +32,7 @@
     />
 
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Josephine's Portfolio</title>
+    <title>Front-end developer: Josephine-Jacobs</title>
   </head>
   <body>
     <div class="container">
