--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
         class="btn btn-outline-dark btn-sm"
         >Projects</a
       >
-      <a href="contact.html" title="contact" class="btn btn-outline-dark btn-sm"
+      <a
+        href="contact.html"
+        title="contact"
+        class="btn btn-outline-dark btn-sm"
+        title="contacts"
         >Contact me</a
       >
     </div>
